examples/fail/semantic/if_condition_not_bool.bina
// EXPECT_SEMANTIC_ERROR: if condition must have type bool
fn main() -> int {
    if 1 {
        return 0;
    }
    return 1;
}
